# projects

./: README.md
.devcontainer/: devcontainer.json
code_understanding/: Dockerfile  ingest.py  main.py  pyproject.toml  utility.py
code_understanding/app/: main.py
code_understanding/cloud/: aws.py
code_understanding/config/: config.json
code_understanding/data/: generator.py
code_understanding/model/: config.json
code_understanding/tools/: agent.py  parsing.py  prompts.py  template.py  tools.py
llms/langchain/: data.py  tools.py
llms/langchain/evaluation/: evaluator.py
