[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["jamesmorrissey11 <142894427+jamesmorrissey11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
openai = "^0.27.8"
pinecone-client = "^2.2.2"
streamlit = "^1.25.0"
cohere = "^4.20.2"
tiktoken = "^0.4.0"
ipykernel = "^6.25.1"
jq = "^1.4.1"
colorlog = "^6.7.0"
uvicorn = "^0.23.2"
aioboto3 = "^11.3.0"
deeplake = "^3.6.22"
langchain = "^0.0.277"
fastapi = "^0.103.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
